fix: [CDS-86891]: Split getActiveServiceInstanceCountBreakdown Aggregate query into 2 separate queries (#56844)
* fix: [CDS-86891]: Split getActiveServiceInstanceCountBreakdown Aggregate query into 2 separate queries

* fix: [CDS-86891]: Rename variables

* fix: [CDS-86891]: code format

* fix: [CDS-86891]: Update Junits

* fix: [CDS-86891]: Update Function interface from java.util, not mongodb

* fix: [CDS-86891]: Reorder for better git diff

* fix: [CDS-86891]: PMD

* fix: [CDS-86891]: better names

* fix: [CDS-86891]: code format

* fix: [CDS-86891]: Make criteriaSet final